--- a/tests/integration/targets/itsm_configuration_item_batch/tasks/main.yml
+++ b/tests/integration/targets/itsm_configuration_item_batch/tasks/main.yml
@@ -20,9 +20,8 @@
           - ci.record.ip_address == "1.1.1.1"
           - ci.record.vm_inst_id == "10"
 
-
     - name: Update existing CMDB -- check mode --
-      configuration_item_batch: &update_cmdb
+      servicenow.itsm.configuration_item_batch: &update_cmdb
         sys_class_name: cmdb_ci_ec2_instance
         id_column_set: vm_inst_id
         dataset:
@@ -43,7 +42,8 @@
 
 
     - name: Update existing CMDB
-      configuration_item_batch: *update_cmdb
+      # configuration_item_batch: *update_cmdb
+      servicenow.itsm.configuration_item_batch: *update_cmdb
       register: ci
 
     - ansible.builtin.assert:
@@ -52,7 +52,7 @@
 
 
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[0].vm_inst_id }}"
@@ -76,7 +76,8 @@
 
 
     - name: Update CMDB with data from AWS
-      configuration_item_batch: &state_check_params
+      # configuration_item_batch: &state_check_params
+      servicenow.itsm.configuration_item_batch: &state_check_params
         sys_class_name: cmdb_ci_ec2_instance
         id_column_set: vm_inst_id
         dataset:
@@ -100,7 +101,7 @@
 
 
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[0].vm_inst_id }}"
@@ -112,7 +113,7 @@
           - result.records[0].ip_address in ('1.2.3.4','4.3.2.1') 
     
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[1].vm_inst_id }}"
@@ -125,7 +126,7 @@
 
 
     - name: Update CMDB with different data
-      configuration_item_batch:
+      servicenow.itsm.configuration_item_batch:
         sys_class_name: cmdb_ci_ec2_instance
         id_column_set: vm_inst_id
         dataset:
@@ -149,7 +150,7 @@
 
 
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[0].vm_inst_id }}"
@@ -172,7 +173,7 @@
           - result is changed
     
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[1].vm_inst_id }}"
@@ -196,7 +197,7 @@
 
 
     - name: Configuration item info
-      configuration_item_info:
+      servicenow.itsm.configuration_item_info:
         sys_class_name: cmdb_ci_ec2_instance
         query:
           - vm_inst_id: "= {{ ci.records_raw[0].vm_inst_id }}"
